--- a/stadium-management-backend/src/main/resources/application.properties
+++ b/stadium-management-backend/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-spring.application.name=stadium-management-backend
+
+spring.datasource.url=jdbc:mysql://localhost:3306/your_database_name?useSSL=false&serverTimezone=UTC
+spring.datasource.username=your_database_username
+spring.datasource.password=your_database_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# MyBatis
+mybatis.mapper-locations=classpath*:mapper/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# Spring Boot
+server.port=8080
+
+# Spring Security
+#security.basic.enabled=false
+
+
+logging.level.root=INFO
